sort user summary data by date

--- a/views/userdata.ejs
+++ b/views/userdata.ejs
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-<h1>Jawbone UP Sleep Data</h1>
+<h1>Jawbone Data For <%= user %></h1>
 <table class="sleep-table">
     <thead>
     <tr>
