add start and end dates for data download

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,10 @@
         <label for="emaId">EMA ID:</label>
         <input type="text" id="emaId" name="emaId" placeholder="Enter EMA ID" required /> <br />
         <label for="email">Jawbone Email:</label>
-        <input type="text" id="email" name="email" placeholder="Jawbone Email" required />
+        <input type="text" id="email" name="email" placeholder="Jawbone Email" required /> <br />
+        <label for="startDate">Start Date:</label>
+        <input type="text" id="startDate" name="startDate" placeholder="mm/dd/yyyy" required
+               pattern="\d{1,2}/\d{1,2}/\d{4}" />
         <input type="submit" value="Next" class="btn" />
     </div>
 </form>
