read user details from file and use web driver to navigate through the data download process

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,6 +45,6 @@
 <body>
 <h1>AdaptUp</h1>
 <h4>Log in using Jawbone user credentials to download user's activity and sleep data.</h4>
-<a href="/login/jawbone" class="btn">Login</a>
+<a href="/login/jawbone" class="btn" id="login">Login</a>
 </body>
 </html>
