--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
         <label for="startDate">Start Date:</label>
         <input type="text" id="startDate" name="startDate" placeholder="mm/dd/yyyy" required
                pattern="\d{1,2}/\d{1,2}/\d{4}" />
-        <input type="submit" value="Next" class="btn" />
+        <input type="submit" id="submit" value="Next" class="btn" />
     </div>
 </form>
 </body>
