--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,20 @@
       </div>
     </div>
     <div class="form-group">
+      <label for="start-date" class="col-sm-2 control-label">Start Date:</label>
+      <div class="col-sm-10">
+        <input type="text" id="startDate" name="startDate" placeholder="MM/DD/YYYY" class="form-control"
+        pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="end-date" class="col-sm-2 control-label">End Date:</label>
+      <div class="col-sm-10">
+        <input type="text" id="endDate" name="endDate" placeholder="MM/DD/YYYY" class="form-control"
+        pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d"/>
+      </div>
+    </div>
+    <div class="form-group">
       <div class="col-sm-6 pull-right">
         <input type="submit" value="Next" class="btn btn-primary" />
       </div>
