--- a/views/header.html
+++ b/views/header.html
@@ -26,6 +26,14 @@
 
 <body>
   <div class="container">
-    <h1>AdaptUp</h1>
-    <h4>Jawbone data downloader</h4>
+    <div class="header-box">
+      <div class="row">
+        <div class="col-sm-6 float-left">
+          <h1>AdaptUp</h1>
+        </div>
+        <div class="col-sm-6 align-text-bottom">
+          <h4>Jawbone data downloader</h4>
+        </div>
+      </div>
+    </div>
     
