--- a/views/header.html
+++ b/views/header.html
@@ -16,7 +16,7 @@
   <title>AdaptUp</title>
   <style type="text/css">
   body {
-    background: url(/images/background.jpg) top center #000 no-repeat;
+    background: url(images/background.jpg) top center #000 no-repeat;
     background-size: cover;
     font-family: Arial, sans-serif;
     text-align: center;
