mount app on a sub-folder from app root

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     Please login to Jawbone using the user's Jawbone account credentials to 
     download that user's activity and sleep data.
   </p>
-  <a href="/login/jawbone" class="btn btn-primary">Jawbone login</a>
+  <a href="/adaptup/login/jawbone" class="btn btn-primary">Jawbone login</a>
 </div>
 
 <% include footer.html %>
