--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   </div>
   
   <div class="row">
-    <form class="form-horizontal" action="/home" method="get">
+    <form class="form-horizontal" action="/adaptup/home" method="get">
       <div class="form-group">
         <label for="emaId" class="col-sm-2 control-label">EMA ID:</label>
         <div class="col-sm-10">
