--- a/views/userdata.ejs
+++ b/views/userdata.ejs
@@ -2,8 +2,8 @@
 
 <div class="button-group">
   <div class="col-sm-2 pull-right">
-    <a href="/logout" class="btn btn-primary btn-block">Log out</a>
-    <a href="/download" class="btn btn-primary btn-block">Download</a>
+    <a href="/adaptup/logout" class="btn btn-primary btn-block">Log out</a>
+    <a href="/adaptup/download" class="btn btn-primary btn-block">Download</a>
   </div>
   <div class="col-sm-10 pull-left">
     <h1>Jawbone Data For <%= user %></h1>
