--- a/views/header.html
+++ b/views/header.html
@@ -8,20 +8,12 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- Custom CSS -->
-<link rel="stylesheet" type="text/css" href="/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 <html>
 
 <head>
   <title>AdaptUp</title>
-  <style type="text/css">
-  body {
-    background: url(/images/background.jpg) top center #000 no-repeat;
-    background-size: cover;
-    font-family: Arial, sans-serif;
-    text-align: center;
-  }
-  </style>
 </head>
 
 <body>
