--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,11 @@
+body {
+  background: url(images/background.png) top center #000 no-repeat;
+  background-size: cover;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  text-align: center;
+}
+
 .sleep-table {
   background-color: rgba(81, 0, 255, 0.8);
   border-collapse: collapse;
